--- a/dashboard.html
+++ b/dashboard.html
@@ -30,6 +30,7 @@
             <!-- Botón que activa el modal de login -->
             <li class="list-group-item">                    
               <i class="fa-solid fa-user fa-user-unlock fa-xl" type="button"></i>
+              <!-- <i class="fa-solid fa-user-unlock fa-xl" type="button"></i> -->
             </li>
           </ul>
         </div>
